--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Template</title>
+    <title>Ping Pong!</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -19,9 +19,26 @@
     <script src="js/scripts.js"></script>
 
   </head>
+  <header>
+    <div class="container">
+      <h1>Ping Pong!</h1>
+    </div>
+  </header>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <div class="input-form">
+        <form id="numberForm">
+          <div class="form-group">
+            <label for="numberInput">Enter a numerical number!</label>
+            <input type="text" id="numberInput">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit!</button>
+        </form>
+      </div>
+      <div class="results">
 
+      </div>
+    </div>
 
   </body>
 </html>
