Add business logic of pingpong output.
Took a few tries but finally got it :/

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </form>
       </div>
       <div class="results">
-
+        <ul id="numberOutput">
+        </ul>
       </div>
     </div>
 
